2009-04-29  Mark Wielaard  <mjw@redhat.com>

	* README: Document systemtap support.
	* INSTALL: Document build requirements for systemtap support.
	* NEWS: Mention systemtap support.

2009-04-29 Andrew John Hughes <ahughes@redhat.com>

	* Makefile.am:
	Use abs_top_builddir to locate generated
	Systemtap file.

2009-04-28  Mark Wielaard  <mjw@redhat.com>

	* tapset/hotspot.stp.in: New systemtap tapset for hotspot.
	* configure.ac: Add check for abs-install-dir when
	--enable-systemtap is given.
	* Makefile.am (icedtea.stamp): Install tapsets.
	(icedtea-debug.stamp): Likewise.
	* .hgignore: Add tapset/hotspot.stp.

2009-03-27  Mark Wielaard  <mjw@redhat.com>

	* patches/icedtea-systemtap.patch: New patch.
	* configure.ac: Add AC_ARG_ENABLE systemtap and AC_CHECK_HEADER
	for sys/sdt.h when --enable-systemtap given.
	* Makefile.am: Add patches/icedtea-systemtap.patch to
	ICEDTEA_PATCHES if ENABLE_SYSTEMTAP.

2009-04-24  Lillian Angel  <langel@redhat.com>

	Fixes #497191
	* Makefile.am
	(NETBEANS_PROFILER_MD5SUM): Updated.
	(stamps/nbplatform.stamp): Fixed to build on amd64 properly.

2009-05-05 Xerxes Rånby <xerxes@zafena.se>

	* ports/hotspot/src/share/vm/shark/sharkCompiler.cpp
	(SharkCompiler::SharkCompiler): Use bool or enum to set
	JIT optimization dependent on the llvm version.
 
2009-05-05 Xerxes Rånby <xerxes@zafena.se>

	* configure.ac (LLVM_CFLAGS): Remove LLVM svn suffix from
	SHARK_LLVM_VERSION.

2009-04-29  Matthias Klose  <doko@ubuntu.com>
	    Xerxes Rånby  <xerxes@zafena.se>

	* configure.am (LLVM_CFLAGS): Add SHARK_LLVM_VERSION.
	* ports/hotspot/src/share/vm/shark/sharkMemoryManager.cpp,
	ports/hotspot/src/share/vm/shark/sharkMemoryManager.hpp: New
	methods getDlsymTable, SetDlsymTable, allocateSpace, dependent
	on the llvm version.

2009-05-01  Gary Benson  <gbenson@redhat.com>

	* ports/hotspot/src/share/vm/shark/sharkFrameCache.hpp: New file.
	* ports/hotspot/src/share/vm/shark/sharkFrameCache.cpp: Likewise.
